fix: reduce section content padding on mobile

--- a/src/components/Section/SectionContent/SectionContent.module.scss
+++ b/src/components/Section/SectionContent/SectionContent.module.scss
@@ -1,4 +1,8 @@
 .content {
-  padding: 3.75rem 0 5rem 25%;
+  padding: 3.75rem 0 5rem 15%;
   width: 70%;
+
+  @media (min-width: 1024px) {
+    padding-left: 25%;
+  }
 }
